pago s3 commit